--- a/portfolio-website/index.html
+++ b/portfolio-website/index.html
@@ -38,16 +38,16 @@
     </nav>
 
     <!-- Hero Section -->
-    <section id="home" class="relative min-h-screen flex items-center justify-center px-4 pt-20 bg-cover bg-center bg-fixed" style="background-image: url('')">
+    <section id="home" class="relative min-h-screen flex items-center justify-center px-4 pt-20 bg-cover bg-center bg-fixed" style="background-image: url('https://i.pinimg.com/1200x/bd/90/a6/bd90a6c8ea07dc7390e461b655a8b1c6.jpg')">
         <!-- Overlay for text readability -->
         <div class="absolute inset-0 bg-black/50 z-0"></div>
 
         <div class="relative z-10 text-center">
             <h2 class="text-5xl md:text-6xl font-bold mb-4">
-                Hi, I'm <span class="text-amber-500">Mervyn Simons</span>
+                Hi, I'm <span class="text-amber-500">Renmar Mabborang</span>
             </h2>
             <p class="text-xl md:text-2xl text-stone-300 mb-8">
-                A passionate developer creating amazing web experiences
+               A passionate developer creating amazing web experiences
             </p>
             <a href="#contact" class="inline-block bg-amber-600 hover:bg-amber-700 text-white font-bold py-3 px-8 rounded-lg transition-colors">
                 Get In Touch
